# dd-val

./: .gitignore  AGENTS.md  Makefile  README.md  project.md  pyproject.toml  test-data.md
corpus/proj01/perturbed/v1/: gold.json
corpus/proj01/perturbed/v2/: gold.json
corpus/proj01_perturbed/: gold.json
corpus/proj01_perturbed_v2/: gold.json
corpus/proj02/perturbed/v1/: gold.json
corpus/proj02/perturbed/v2/: gold.json
corpus/proj02_perturbed/: gold.json
corpus/proj02_perturbed_v2/: gold.json
corpus/proj03/perturbed/v1/: gold.json
corpus/proj03/perturbed/v2/: gold.json
corpus/proj03_perturbed/: gold.json
corpus/proj03_perturbed_v2/: gold.json
corpus/proj04/perturbed/v1/: gold.json
corpus/proj04_perturbed/: gold.json
corpus/proj04_perturbed_v2/: gold.json
corpus/proj05_perturbed/: gold.json
corpus/proj05_perturbed_v2/: gold.json
corpus/proj06_perturbed/: gold.json
corpus/proj06_perturbed_v2/: gold.json
corpus/proj07_perturbed/: gold.json
corpus/proj07_perturbed_v2/: gold.json
corpus/proj08_perturbed/: gold.json
corpus/proj08_perturbed_v2/: gold.json
corpus/proj09_perturbed/: gold.json
corpus/proj09_perturbed_v2/: gold.json
corpus/proj10_perturbed/: gold.json
corpus/proj10_perturbed_v2/: gold.json
samples/myproject/v1/: dataset.csv  dictionary.csv  findings.json  report.html
scripts/: selftest.py  validate_all.ps1  validate_all.sh
specs/: REDCap-dd.md  testing.md  validator.md
src/dd_eval/: __init__.py  corrupt.py  schema.py  score.py  seed.py  synth.py  util.py
src/dd_val/: checks.py  cli.py  parse.py  report.py
(+13 files in other folders)
